// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExceptionMechanism additional data should render all fields in the data object 1`] = `
<ExceptionMechanism
  data={
    Object {
      "data": Object {
        "relevant_address": "0x1",
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="data:relevant_address"
            name="relevant_address"
            value="0x1"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    relevant_address
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    0x1
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism additional data should skip object-like values 1`] = `
<ExceptionMechanism
  data={
    Object {
      "data": Object {
        "a": Object {
          "x": 11,
        },
        "b": Array [
          4,
          2,
        ],
        "c": 2017-10-17T02:41:20.000Z,
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should add the help_link to the description hovercard 1`] = `
<ExceptionMechanism
  data={
    Object {
      "description": "Nothing to see here.",
      "help_link": "https://example.org/help",
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    <Hovercard
                      body="Nothing to see here."
                      containerClassName="pill-icon"
                      displayTimeout={100}
                      header={
                        <span>
                          Details
                           
                          <a
                            className="external-icon"
                            href="https://example.org/help"
                          >
                            <ForwardRef(IconOpen)
                              size="xs"
                            />
                          </a>
                        </span>
                      }
                      position="top"
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <span
                              aria-describedby="hovercard-123456"
                              className="pill-icon"
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <IconInfo
                                size="14px"
                              >
                                <ForwardRef(SvgIcon)
                                  size="14px"
                                >
                                  <svg
                                    fill="currentColor"
                                    height="14px"
                                    viewBox="0 0 16 16"
                                    width="14px"
                                  >
                                    <path
                                      d="M8,11.78A.74.74,0,0,1,7.24,11V7a.75.75,0,0,1,1.5,0v4A.75.75,0,0,1,8,11.78Z"
                                    />
                                    <circle
                                      cx="8"
                                      cy="4.78"
                                      r="0.76"
                                    />
                                    <path
                                      d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                                    />
                                  </svg>
                                </ForwardRef(SvgIcon)>
                              </IconInfo>
                            </span>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Hovercard>
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should not add the help_link if not starts with http(s) 1`] = `
<ExceptionMechanism
  data={
    Object {
      "description": "Nothing to see here.",
      "help_link": "example.org/help",
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    <Hovercard
                      body="Nothing to see here."
                      containerClassName="pill-icon"
                      displayTimeout={100}
                      header={
                        <span>
                          Details
                           
                        </span>
                      }
                      position="top"
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <span
                              aria-describedby="hovercard-123456"
                              className="pill-icon"
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <IconInfo
                                size="14px"
                              >
                                <ForwardRef(SvgIcon)
                                  size="14px"
                                >
                                  <svg
                                    fill="currentColor"
                                    height="14px"
                                    viewBox="0 0 16 16"
                                    width="14px"
                                  >
                                    <path
                                      d="M8,11.78A.74.74,0,0,1,7.24,11V7a.75.75,0,0,1,1.5,0v4A.75.75,0,0,1,8,11.78Z"
                                    />
                                    <circle
                                      cx="8"
                                      cy="4.78"
                                      r="0.76"
                                    />
                                    <path
                                      d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                                    />
                                  </svg>
                                </ForwardRef(SvgIcon)>
                              </IconInfo>
                            </span>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Hovercard>
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should render a description hovercard 1`] = `
<ExceptionMechanism
  data={
    Object {
      "description": "Nothing to see here.",
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    <Hovercard
                      body="Nothing to see here."
                      containerClassName="pill-icon"
                      displayTimeout={100}
                      header={
                        <span>
                          Details
                           
                        </span>
                      }
                      position="top"
                    >
                      <Manager>
                        <Reference>
                          <InnerReference
                            setReferenceNode={[Function]}
                          >
                            <span
                              aria-describedby="hovercard-123456"
                              className="pill-icon"
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                            >
                              <IconInfo
                                size="14px"
                              >
                                <ForwardRef(SvgIcon)
                                  size="14px"
                                >
                                  <svg
                                    fill="currentColor"
                                    height="14px"
                                    viewBox="0 0 16 16"
                                    width="14px"
                                  >
                                    <path
                                      d="M8,11.78A.74.74,0,0,1,7.24,11V7a.75.75,0,0,1,1.5,0v4A.75.75,0,0,1,8,11.78Z"
                                    />
                                    <circle
                                      cx="8"
                                      cy="4.78"
                                      r="0.76"
                                    />
                                    <path
                                      d="M8,16a8,8,0,1,1,8-8A8,8,0,0,1,8,16ZM8,1.53A6.47,6.47,0,1,0,14.47,8,6.47,6.47,0,0,0,8,1.53Z"
                                    />
                                  </svg>
                                </ForwardRef(SvgIcon)>
                              </IconInfo>
                            </span>
                          </InnerReference>
                        </Reference>
                      </Manager>
                    </Hovercard>
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should render a help_link icon 1`] = `
<ExceptionMechanism
  data={
    Object {
      "help_link": "https://example.org/help",
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    <a
                      className="external-icon"
                      href="https://example.org/help"
                    >
                      <IconOpen
                        size="xs"
                      >
                        <ForwardRef(SvgIcon)
                          size="xs"
                        >
                          <svg
                            fill="currentColor"
                            height="12px"
                            viewBox="0 0 16 16"
                            width="12px"
                          >
                            <path
                              d="M13.25,16H2.75A2.75,2.75,0,0,1,0,13.25V2.75A2.75,2.75,0,0,1,2.75,0h10.5A2.75,2.75,0,0,1,16,2.75v10.5A2.75,2.75,0,0,1,13.25,16ZM2.75,1.5A1.25,1.25,0,0,0,1.5,2.75v10.5A1.25,1.25,0,0,0,2.75,14.5h10.5a1.25,1.25,0,0,0,1.25-1.25V2.75A1.25,1.25,0,0,0,13.25,1.5Z"
                            />
                            <path
                              d="M11.13,10.63a.74.74,0,0,1-.75-.75V5.62H6.12a.75.75,0,0,1,0-1.5h5a.76.76,0,0,1,.75.75v5A.75.75,0,0,1,11.13,10.63Z"
                            />
                            <path
                              d="M4.87,11.88a.79.79,0,0,1-.53-.22.75.75,0,0,1,0-1.06L10.6,4.34A.75.75,0,0,1,11.66,5.4L5.4,11.66A.77.77,0,0,1,4.87,11.88Z"
                            />
                          </svg>
                        </ForwardRef(SvgIcon)>
                      </IconOpen>
                    </a>
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should render the exception mechanism 1`] = `
<ExceptionMechanism
  data={
    Object {
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism basic attributes should render the handled pill 1`] = `
<ExceptionMechanism
  data={
    Object {
      "handled": false,
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="handled"
            name="handled"
            value={false}
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    handled
                  </span>
                </PillName>
                <PillValue
                  type="negative"
                >
                  <span
                    className="css-uiuwkp-PillName-PillValue ez9cevw2"
                    type="negative"
                  >
                    no
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism errno meta should prefer the errno name if present 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "errno": Object {
          "name": "E2BIG",
          "number": 7,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="errno"
            name="errno"
            value="E2BIG"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    errno
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    E2BIG
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism errno meta should render the errno number 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "errno": Object {
          "number": 7,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="errno"
            name="errno"
            value={7}
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    errno
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    7
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism mach_exception meta should prefer the exception name if present 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "mach_exception": Object {
          "code": 1,
          "exception": 1,
          "name": "EXC_BAD_ACCESS",
          "subcode": 8,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="mach"
            name="mach exception"
            value="EXC_BAD_ACCESS"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mach exception
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    EXC_BAD_ACCESS
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism mach_exception meta should render the mach exception number 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "mach_exception": Object {
          "code": 1,
          "exception": 1,
          "subcode": 8,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="mach"
            name="mach exception"
            value={1}
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mach exception
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    1
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism signal meta should add the signal code if present 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "signal": Object {
          "code": 0,
          "number": 11,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="signal"
            name="signal"
            value="11 (code 0)"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    signal
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    11 (code 0)
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism signal meta should prefer signal and code names if present 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "signal": Object {
          "code": 0,
          "code_name": "SEGV_NOOP",
          "name": "SIGSEGV",
          "number": 11,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="signal"
            name="signal"
            value="SIGSEGV (SEGV_NOOP)"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    signal
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    SIGSEGV (SEGV_NOOP)
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;

exports[`ExceptionMechanism signal meta should render the signal number 1`] = `
<ExceptionMechanism
  data={
    Object {
      "meta": Object {
        "signal": Object {
          "number": 11,
        },
      },
      "type": "generic",
    }
  }
>
  <Wrapper>
    <div
      className="css-1t6kzof-Wrapper e15fqys0"
    >
      <Pills>
        <div
          className="css-169cud9-Pills e17cyim10"
        >
          <Pill
            key="mechanism"
            name="mechanism"
            value="generic"
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    mechanism
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    generic
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
          <Pill
            key="signal"
            name="signal"
            value={11}
          >
            <StyledPill>
              <li
                className="css-m8rol9-StyledPill ez9cevw0"
              >
                <PillName>
                  <span
                    className="css-rc2gkf-PillName ez9cevw1"
                  >
                    signal
                  </span>
                </PillName>
                <PillValue>
                  <span
                    className="css-11agy1x-PillName-PillValue ez9cevw2"
                  >
                    11
                  </span>
                </PillValue>
              </li>
            </StyledPill>
          </Pill>
        </div>
      </Pills>
    </div>
  </Wrapper>
</ExceptionMechanism>
`;
